Added logging and appropriate permissions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.example.nrtpttv2">
 
     <uses-permission android:name="android.permission.INTERNET" />
-  
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
