--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'net.named-data:jndn-android:0.22'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.10.4'
-    implementation('com.github.Fylipp:easy-events:1.1.0'){ exclude group: 'org.hamcrest', module: 'hamcrest-core' }
+    implementation('com.github.Fylipp:easy-events:1.1.0') {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
     implementation 'com.google.code.gson:gson:2.8.5'
 }
