--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -42,4 +42,5 @@ dependencies {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation files('libs/jndn-management-1.1.3.jar')
 }
